# M-D-T

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT_REPORT_CODEX.md  README.md  REPORT_CLAIMS.md  THEOREM_COMPLIANCE.md  app.py  appG.py  app_original.py  app_persistent_upgrade.diff  dl8_benchmark_results.tex  paper_text.txt  profile_result.txt  pyproject.toml  requirements.txt  test.md
.github/workflows/: ci.yml  rust-gsnh-extension.yml
archive/: README.md  gsnh_mdt_v3_reference.py
coq/: .GSNH_Threshold_AXp.aux  GSNH_Affine_AXp.v  GSNH_Threshold_AXp.glob  GSNH_Threshold_AXp.v  GSNH_Threshold_AXp.vo
docs/: LANGUAGE_FAMILY_EVOLUTION.md  THESIS_IMPLEMENTATION_STATUS.md  architecture.md  baseline_freeze.md  design_decisions.md  migration_plan.md  research_transition.md  rust_gsnh_engine.md  tractree_report.aux  tractree_report.out  tractree_report.tex
docs/figures/: DIAGRAMS.md  axp_extraction_pipeline.mmd  benchmark_reporting_pipeline.dot  benchmark_reporting_pipeline.mmd  language_families.mmd  square2cnf_two_sat_encoding.mmd  theorem_strict_checker.mmd  training_pipeline.mmd
reports/: master_thesis_report.tex
rust_gsnh/: Cargo.toml  pyproject.toml
rust_gsnh/src/: affine.rs  antihorn.rs  api.rs  bitset.rs  conjui.rs  data.rs  family.rs  horn.rs  lib.rs  predicates.rs  python.rs  scoring.rs  search.rs  square_cnf.rs  tree.rs
rust_gsnh/tests/: data_equivalence.rs
scripts/: benchmark_dl8.py  benchmark_dl8_languages.py  benchmark_dl8_languages_updated.py  benchmark_rust_gsnh_smoke.py  check_rust_gsnh_extension.sh  debug_affine_rust_divergence.py  debug_square2cnf_rust_timeout.py  generate_diagrams.py  prooftest.py
src/gsnh_mdt/: __init__.py  audit.py  config.py  engine.py  types.py
src/gsnh_mdt/api/: __init__.py  classifier.py
src/gsnh_mdt/ensembles/: __init__.py  gradient_boosting.py  random_forest.py
src/gsnh_mdt/literals/: __init__.py  base.py  binary.py  compare.py  predicates.py
src/gsnh_mdt/sat/: __init__.py  (+4 more)
tests/: capture_golden.py  capture_golden_expanded.py  capture_method_golden.py  data_path.py  golden_baselines.json  golden_expanded.json  golden_methods.json  golden_utils.py  test_api_classifier.py  test_benchmark_evidence_outputs.py  test_benchmark_theorem_metadata.py  test_config_parity.py  test_engine_wrapper.py  test_engine_wrapper_depth1_parity.py  test_engine_wrapper_parity.py  test_expanded_regression.py  test_language_refactor.py  test_literals.py  test_method_regression.py  test_prefix.py  test_rng_reproducibility.py  test_rust_gsnh_binding.py  test_sat.py  test_scoring.py  test_theorem_compliance.py  test_theorem_strict.py  test_thesis_readiness.py  test_threshold_encoder.py  test_tree_regression.py
(+24 files in other folders)
