[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gsnh-mdt"
version = "3.0.0"
description = "Tractable Multivariate Decision Trees with GSNH language constraints"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "numba>=0.56",
    "scikit-learn>=1.0",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "black>=23.0",
    "pre-commit>=3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "regression: golden baseline regression tests",
    "slow: tests that require JIT warmup or large datasets",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",  # line length handled by formatter
    "E741",  # ambiguous variable name (verbatim from monolith)
    "B007",  # unused loop variable (common in search kernels)
]

[tool.ruff.lint.per-file-ignores]
# builder.py is frozen verbatim — do not lint-fix during extraction phase
"src/gsnh_mdt/tree/builder.py" = ["ALL"]
"src/gsnh_mdt/ensembles/*.py" = ["ALL"]
"src/gsnh_mdt/api/classifier.py" = ["ALL"]
# Scripts are copies from monolith
"scripts/*.py" = ["ALL"]

[tool.black]
line-length = 100
target-version = ["py39"]
